--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,7 @@ img {
     background-color: var(--accent-color);
     color: var(--white-text-color);
 
-    transition: border 250ms linear, color 250ms linear, background-color 250ms linear;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover {
@@ -191,7 +191,7 @@ img {
     height: 100%;
     fill: currentColor;
 
-    transition: transform 500ms linear;
+    transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-help:hover,
@@ -346,7 +346,7 @@ img {
     cursor: pointer;
     color: var(--secondary-etxt-color);
 
-    transition: color 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .obrane-korzina:hover,
@@ -397,6 +397,7 @@ img {
 
 .icons-list .icons-link,
 .species-list .species-link {
+    position: relative;
     padding-top: 18px;
     padding-bottom: 18px;
     display: block;
@@ -408,11 +409,44 @@ img {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icons-list .icons-link:hover,
-.icons-list .icons-link:focus,
-.species-list .species-link:hover,
-.species-list .species-link:focus {
+
+.icons-link::after,
+.species-link::after {
+    position: absolute;
+    content: "";
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 8px;
+
+    border-radius: 8px;
+    background-color: var(--accent-color);
+    opacity: 0;
+
+    transform: scaleX(0);
+    transition: transform 250ms linear, opacity 250ms linear;
+
+}
+
+.icons-link.transformation::after {
+    transform-origin: center left;
+}
+
+.species-link.transformation::after {
+    transform-origin: center right;
+}
+
+.icons-link:hover,
+.icons-link:focus,
+.species-link:hover,
+.species-link:focus {
     color: var(--accent-color);
+}
+
+.icons-link:hover::after,
+.species-link:hover::after {
+    opacity: 1;
+    transform: scaleX(1);
 }
 
 .icons-link .icons-shares {
@@ -644,7 +678,7 @@ img {
 .button-sire {
     color: transparent;
 
-    transition: color 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-sire:hover,
@@ -661,7 +695,7 @@ img {
 .button-white {
     color: #fff;
 
-    transition: color 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-white:hover,
@@ -776,7 +810,7 @@ img {
     border-radius: 8px;
     border: 1px solid transparent;
 
-    transition: color 250ms linear, border 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .all-reviews:hover,
@@ -1104,7 +1138,7 @@ img {
     width: 40px;
     height: 40px;
 
-    transition: transform 250ms linear;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .wrapper-item .link-social:hover {
@@ -1129,7 +1163,7 @@ img {
     color: #b1b1b1;
     border: 1px solid transparent;
 
-    transition: color 250ms linear, border 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-visa>.icon-visa {
@@ -1154,7 +1188,7 @@ img {
     color: #b1b1b1;
     border: 1px solid transparent;
 
-    transition: color 250ms linear, border 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-mastercard>.icon-mastercard {
@@ -1187,7 +1221,7 @@ img {
 
     color: var(--primary-bg-color);
 
-    transition: color 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
@@ -1222,7 +1256,7 @@ img {
 
     color: var(--white-text-color);
 
-    transition: color 250ms linear;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .phone {
