--- a/css/styles.css
+++ b/css/styles.css
@@ -241,6 +241,7 @@ img {
     padding: 0;
     display: flex;
     align-items: center;
+    z-index: 1;
 
     border: none;
     border-radius: 8px;
