--- a/css/styles.css
+++ b/css/styles.css
@@ -777,6 +777,10 @@ img {
 .last-reviews {
     padding-top: 70px;
     padding-bottom: 50px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1920px;
+
     background-color: #e9e9e9;
 }
 
@@ -1121,6 +1125,11 @@ img {
     position: relative;
     padding-top: 40px;
     padding-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+
+    max-width: 1920px;
+
     background-color: var(--main-text-color);
 }
 
@@ -1299,7 +1308,7 @@ img {
 }
 
 .connection {
-    font-size: 18px;
+    font-size: 17px;
     font-style: normal;
     max-width: 175px;
     /* font-weight: 600; */
