--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,7 @@ img {
 }
 
 .form-input:focus {
-    border: 1px solid var(--accent-color);
+    border-color: var(--accent-color);
 }
 
 .form-input::placeholder {
@@ -878,7 +878,7 @@ img {
 
 .all-reviews:hover,
 .all-reviews:focus {
-    border: 1px solid var(--accent-color);
+    border-color: var(--accent-color);
     color: var(--accent-color);
 }
 
@@ -1250,7 +1250,7 @@ img {
 .link-visa:hover,
 .link-visa:focus {
     color: var(--accent-color);
-    border: 1px solid var(--accent-color);
+    border-color: var(--accent-color);
 }
 
 .link-mastercard {
@@ -1273,7 +1273,7 @@ img {
 
 .link-mastercard:hover,
 .link-mastercard:focus {
-    border: 1px solid var(--accent-color);
+    border-color: var(--accent-color);
     color: var(--accent-color);
 }
 
