--- a/css/styles.css
+++ b/css/styles.css
@@ -243,6 +243,7 @@ img {
 @media screen and (max-width:1319px) {
  .header-middle{
 padding-top: 20px;
+padding-bottom: 10px;
 
        flex-wrap: wrap;
        row-gap: 30px;
