--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,8 @@ a {
 
 h2,
 h3 {
+margin: 0;
+
   font-weight: 600;
 }
 
@@ -60,13 +62,19 @@ img {
 }
 
 .section-title {
-  font-size: 40px;
-  /* font-weight: 600; */
-  line-height: 1.2;
-  margin-top: 0;
   margin-bottom: 40px;
 
-  color: var(--main-text-color);
+  font-size: 30px;
+line-height: calc(40/30);
+
+  color: var(--main-text-color);   
+}
+
+@media screen and (min-width:1319px) {
+  .section-title{
+  font-size: 40px;
+  line-height: 1.2;
+  }
 }
 
 .button {
@@ -638,20 +646,41 @@ margin-left: auto;
 .popular-categories .list-categories {
   display: flex;
   flex-wrap: wrap;
+  gap: 10px;
+
+  background-color: yellow;
+}
+
+@media screen and (min-width:1319px) {
+  .popular-categories .list-categories{
+    row-gap: 24px;
+  }
 }
 
 .item-categories {
   position: relative;
-  margin-right: 10px;
-  margin-bottom: 24px;
-  /* width: 250px; */
-  width: calc((100% - 40px) / 5);
+
+  width: calc((100% - 10px) / 2);
 
   border-radius: 8px;
-  overflow: hidden;
+  /* overflow: hidden; */
 
   background-color: var(--white-text-color);
+  background-color: red;
   box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
+
+  background-image: url("../images/popular-categoris/frame-image.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: bottom;
+}
+
+@media screen and (min-width:1319px) {
+  .item-categories{
+
+
+      width: calc((100% - 40px) / 5);
+  }
 }
 
 .item-categories:nth-child(5n) {
