--- a/css/styles.css
+++ b/css/styles.css
@@ -31,10 +31,9 @@ a {
 }
 
 h2,
-h3 {
+h3,
+p {
 margin: 0;
-
-  font-weight: 600;
 }
 
 img {
@@ -692,38 +691,65 @@ margin-left: auto;
 }
 
 .popular-categories .description {
-  font-size: 18px;
-  margin: 0;
-  /* font-weight: 600; */
-  /* line-height: 1.4; */
+  position: absolute;
+  top: 15px;
+
+  font-size: 19px;
+    line-height: calc(24/19);
+}
+
+@media screen and (min-width:1320px) {
+  .popular-categories .description {
+  top: 20px;
+
+      font-size: 18px;
+  }
 }
 
 .popular-categories .title-descr {
-  position: absolute;
-  top: 20px;
-  left: 20px;
+  left: 15px;
   color: var(--main-text-color);
 }
 
+@media screen and (min-width:1320px) {
+  .popular-categories .title-descr{
+  left: 20px;
+  }
+}
+
 .popular-categories .amount {
-  position: absolute;
-  top: 20px;
-  right: 20px;
+  right: 15px;
   color: #b1b1b1;
+}
+
+@media screen and (min-width:1320px) {
+  .popular-categories .amount{
+  right: 20px;
+  }
 }
 
 .link-categories {
   position: absolute;
-  bottom: 20px;
-  right: 20px;
-  width: 50px;
-  height: 50px;
+  bottom: 15px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
   padding: 0;
   border: none;
   background-color: transparent;
 
   cursor: pointer;
   color: transparent;
+}
+
+@media screen and (min-width:1320px) {
+  .link-categories{
+ bottom: 20px;
+  right: 20px;
+
+     width: 50px;
+  height: 50px;
+  }
 }
 
 .icons-categories {
