--- a/css/styles.css
+++ b/css/styles.css
@@ -69,10 +69,10 @@ line-height: calc(40/30);
   color: var(--main-text-color);   
 }
 
-@media screen and (min-width:1319px) {
+@media screen and (min-width:1320px) {
   .section-title{
   font-size: 40px;
-  line-height: 1.2;
+  line-height: calc(48/40);
   }
 }
 
@@ -144,7 +144,7 @@ line-height: calc(40/30);
   align-items: baseline;
 }
 
-@media screen and (max-width:1319px) {
+@media screen and (max-width:1320px) {
   .about-help{
     display: none;
   }
@@ -650,11 +650,9 @@ margin-left: auto;
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-
-  background-color: yellow;
 }
 
-@media screen and (min-width:1319px) {
+@media screen and (min-width:1320px) {
   .popular-categories .list-categories{
     row-gap: 24px;
   }
@@ -669,7 +667,6 @@ margin-left: auto;
   /* overflow: hidden; */
 
   background-color: var(--white-text-color);
-  background-color: red;
   box-shadow: -3px 4px 15px 0px rgba(0, 0, 0, 0.06);
 
   background-image: url("../images/popular-categoris/frame-image.png");
@@ -678,7 +675,7 @@ margin-left: auto;
   background-position: bottom;
 }
 
-@media screen and (min-width:1319px) {
+@media screen and (min-width:1320px) {
   .item-categories{
       width: calc((100% - 40px) / 5);
   }
